refactor: big changes to dotfiles

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,3 +1,9 @@
+tap "homebrew/services"
+tap "oven-sh/bun"
+
+# Automatically exclude development dependencies from Time Machine backups
+brew "asimov", restart_service: :changed
+
 # Clone of cat(1) with syntax highlighting and Git integration
 brew "bat"
 
@@ -7,32 +13,70 @@ brew "exa"
 # Command-line fuzzy finder written in Go
 brew "fzf"
 
-# User-friendly command-line shell for UNIX-like operating systems
-brew "fish"
-
 # GitHub command-line tool
 brew "gh"
+
+# Git extension for versioning large files
+brew "git-lfs"
+
+# Ping, but with a graph
+brew "gping"
 
 # Ambitious Vim-fork focused on extensibility and agility
 brew "neovim", args: ["HEAD"]
 
-# Search tool like grep and The Silver Searcher
-brew "ripgrep"
+# Development kit for the Java programming language
+brew "openjdk"
+
+# Rust toolchain installer
+brew "rustup"
 
 # Cross-shell prompt for astronauts
 brew "starship"
 
+# Modern and pretty fancy file manager for the terminal
+brew "superfile"
+
 # Simplified and community-driven man pages
 brew "tldr"
 
-# Application launcher and productivity software
-cask "alfred"
+# Display directories as trees (with optional color/HTML output)
+brew "tree"
+
+brew "atuin"
+
+# Incredibly fast JavaScript runtime, bundler, transpiler and package manager - all in one.
+brew "oven-sh/bun/bun"
+
+# Password manager that keeps all passwords secure behind one password
+cask "1password"
+
+# Command-line interface for 1Password
+cask "1password-cli"
+
+# Chromium based browser
+cask "arc"
+
+# 3D model slicing software for 3D printers, maintained by Bambu Lab
+cask "bambu-studio"
+
+# Online gaming platform
+cask "battle-net"
+
+# Display management tool
+cask "betterdisplay"
+
+# OpenAI's official ChatGPT desktop app
+cask "chatgpt"
+
+# Anthropic's official Claude AI desktop app
+cask "claude"
+
+# Search tool like grep and The Silver Searcher
+brew "ripgrep"
 
 # Voice and text chat software
 cask "discord"
-
-# App to build and share containerized applications and microservices
-cask "docker"
 
 # Collaborative team software
 cask "figma"
@@ -46,5 +90,64 @@ cask "kitty"
 # Knowledge base that works on top of a local folder of plain text Markdown files
 cask "notion"
 
+# Like neofetch, but much faster because written mostly in C
+brew "fastfetch"
+
 # Music streaming service
 cask "spotify"
+
+# Calculator and converter application
+cask "numi"
+
+# Client for Proton Mail and Proton Calendar
+cask "proton-mail"
+
+# Control your tools with a few keystrokes
+cask "raycast"
+
+# Window snapping tool
+cask "rectangle-pro"
+
+# Collection of apps available by subscription
+cask "setapp"
+
+# 3D CAD software
+cask "shapr3d"
+
+# Team communication and collaboration software
+cask "slack"
+
+# Mesh VPN based on WireGuard
+cask "tailscale"
+
+# Messaging app with a focus on speed and security
+cask "telegram"
+
+# Native desktop client for WhatsApp
+cask "whatsapp"
+
+# Open-source code editor
+cask "visual-studio-code"
+
+vscode "alefragnani.project-manager"
+vscode "asvetliakov.vscode-neovim"
+vscode "bierner.github-markdown-preview"
+vscode "bierner.markdown-checkbox"
+vscode "bierner.markdown-emoji"
+vscode "bierner.markdown-footnotes"
+vscode "bierner.markdown-mermaid"
+vscode "bierner.markdown-preview-github-styles"
+vscode "bierner.markdown-yaml-preamble"
+vscode "bradlc.vscode-tailwindcss"
+vscode "dbaeumer.vscode-eslint"
+vscode "editorconfig.editorconfig"
+vscode "esbenp.prettier-vscode"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.github-vscode-theme"
+vscode "openai.chatgpt"
+vscode "oven.bun-vscode"
+vscode "ryanluker.vscode-coverage-gutters"
+vscode "suhelmakkad.shadcn-ui"
+vscode "vercel.turbo-vsc"
+vscode "yoavbls.pretty-ts-errors"
