--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: Install jq
-      run: sudo apt update && sudo apt install -y jq
+      run: apt update && apt install -y jq
 
     - name: Checkout userspace
       uses: actions/checkout@v4
