--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -31,6 +31,7 @@ jobs:
       run: cp -a main/keyboards/qmk/. qmk_firmware/keyboards/
 
     - name: Build firmware
+      shell: bash
       run: |
         mkdir output
         cd qmk_firmware
