--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,3 +11,7 @@ font_family      family="SF Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
+hide_window_decorations titlebar-only
+window_margin_width 10
+placement_strategy center
