feat(common): change kitty tab-bar color on deltalab ssh sessions

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,3 +15,5 @@ bold_italic_font auto
 hide_window_decorations titlebar-only
 window_margin_width 10
 placement_strategy center
+
+allow_remote_control yes
