--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -31,8 +31,8 @@ brew "starship"
 # Modern and pretty fancy file manager for the terminal
 brew "superfile"
 
-# Simplified and community-driven man pages
-brew "tldr"
+# tldr 
+brew "tealdeer"
 
 # Display directories as trees (with optional color/HTML output)
 brew "tree"
