--- a/docker/config.json
+++ b/docker/config.json
@@ -1,5 +1,13 @@
 {
   "auths": {},
   "currentContext": "colima",
-  "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"]
+  "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"],
+  "credHelpers": {
+    "gcr.io": "gcloud",
+    "us.gcr.io": "gcloud",
+    "eu.gcr.io": "gcloud",
+    "asia.gcr.io": "gcloud",
+    "staging-k8s.gcr.io": "gcloud",
+    "marketplace.gcr.io": "gcloud"
+  }
 }
