--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -109,28 +109,8 @@ cask "telegram"
 # Native desktop client for WhatsApp
 cask "whatsapp"
 
-# Open-source code editor
-cask "visual-studio-code"
-
-vscode "alefragnani.project-manager"
-vscode "asvetliakov.vscode-neovim"
-vscode "bierner.github-markdown-preview"
-vscode "bierner.markdown-checkbox"
-vscode "bierner.markdown-emoji"
-vscode "bierner.markdown-footnotes"
-vscode "bierner.markdown-mermaid"
-vscode "bierner.markdown-preview-github-styles"
-vscode "bierner.markdown-yaml-preamble"
-vscode "bradlc.vscode-tailwindcss"
-vscode "dbaeumer.vscode-eslint"
-vscode "editorconfig.editorconfig"
-vscode "esbenp.prettier-vscode"
-vscode "github.copilot"
-vscode "github.copilot-chat"
-vscode "github.github-vscode-theme"
-vscode "openai.chatgpt"
-vscode "oven.bun-vscode"
-vscode "ryanluker.vscode-coverage-gutters"
-vscode "suhelmakkad.shadcn-ui"
-vscode "vercel.turbo-vsc"
-vscode "yoavbls.pretty-ts-errors"
+# since Brewfile's are just Ruby, we can include other Brewfiles
+Dir.glob(File.expand_path("~/dotfiles/**/Brewfile")).each do |file|
+  next if file == __FILE__ # avoid infinite loop if this file is inside dotfiles
+  instance_eval File.read(file), file
+end
