feat(docker): update Brewfile and config for OrbStack integration; remove colima references

--- a/docker/config.json
+++ b/docker/config.json
@@ -8,6 +8,6 @@
     "staging-k8s.gcr.io": "gcloud",
     "us.gcr.io": "gcloud"
   },
-  "currentContext": "colima",
+  "currentContext": "orbstack",
   "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"]
 }
