--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,7 +22,7 @@
   default = simple
 	autoSetupRemote = true
 [pull]
-	rebase = true
+	rebase = false
 [init]
   defaultBranch = main
 [hub]
@@ -39,3 +39,5 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[rerere]
+	enabled = true
